--- a/Class4/Style.css
+++ b/Class4/Style.css
@@ -1,28 +1,57 @@
 body {
     padding-top: 70px;
     }
+.container-fluid{
+background-color: #614144 ;
+}
+.navbar-default .navbar-nav li a {
+font-family: "Book Antiqua";
+color: white;
+letter-spacing: 2px;
+
+}
+.navbar-brand {
+font-size: 40px;
+font-family: "Didot";
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+}
 
 #myCarousel {
-    max-width: 700px;
+    max-width: 1000px;
     margin: 0 auto
 }
 .item {
-  max-width: 700px;
-  max-height: 350px;
+  max-width: 1000px;
+  max-height: 470px;
   }
+section {
+padding: 40px;
+}
 .main-headings {
-padding: 15px;
 text-align: center;
+font-family: "Didot";
+font-size: 40px;
+}
+p{
+font-family: "Book Antiqua";
+}
+h3 {
+font-family: "Book Antiqua";
 }
 .main-text {
 text-align: center;
 padding:10px;
 }
-
+#susisiekyte {
+background-color: #614144;
+}
 .form-area {
     background-color: #FAFAFA;
 	padding: 10px 40px 60px;
-	margin: 10px 0px 60px;
+	margin: 10px 0px 10px;
 	border: 1px solid GREY;
 	}
 .business-hours {
@@ -41,10 +70,20 @@ padding:15px;
 margin: 0 auto;
 text-align: center;
 }
+.btn-primary {
+    color: #fff;
+    background-color: #614144;
+    border-color: #302122;
+}
 .footer{
 padding: 30px;
-background-color: #FAFAFA;
+background-color: #614144;
+border: 2px;
 }
 .footer .col-md-3 {
 text-align: center;
+color: white;
 }
+
+
+/* make contact form same as working hours --> <textarea class="form-control" type="textarea" id="message" placeholder="Žinutė" maxlength="140" rows="7" style="margin: 0px -1px 0px 0px; height: 77px; width: 475px;"></textarea> */
