--- a/Fakebook/templates/index.html
+++ b/Fakebook/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Monika Laurinaviciute | Fakebook</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
 </head>
 <body>
@@ -13,16 +14,14 @@
         </div>
     <div class="container">
         <img id="cover" src="https://img1.coastalliving.timeinc.net/sites/default/files/styles/4_3_horizontal_inbody_900x506/public/image/2017/03/main/poipu-beach-park-hawaii_0.jpg?itok=YqAw-Swl">
-    <img id="profile" src="https://scontent.fvie1-1.fna.fbcdn.net/v/t1.0-9/16831980_10210946121145621_3684168320750213034_n.jpg?oh=400bb31be3326574b486f8717473ea65&oe=5AA7F932" width="326" height="326" alt="Picture of Monika">
-        <div class="name"> Monika Laurinaviciute </div>
+        <img id="profile" src="https://scontent.fvie1-1.fna.fbcdn.net/v/t1.0-9/16831980_10210946121145621_3684168320750213034_n.jpg?oh=400bb31be3326574b486f8717473ea65&oe=5AA7F932" width="326" height="326" alt="Picture of Monika">
+        <div class="name"> Monika L. </div>
     </div>
     <center> <button>Add Friend</button><button>Follow</button><button>Message Monika</button></center>
     <center> <h3>About</h3>
         <p><b>Lives in:</b> Vienna, Austria <br>
             <b>Fakebook friends:</b> 10,000,000 <br>
         <b>Currently:</b> training to become a Ninja <br>
-            In her free time Monika likes to double as an angel at the St. Peters Basilica <br>
-
-    </p></center>
+        </p></center>
 </body>
 </html>
