--- a/Class4/templates/Bootstrap.html
+++ b/Class4/templates/Bootstrap.html
@@ -9,8 +9,17 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link type= "text/css" rel="stylesheet" href="/assets/css/style1.css" >
 
-    <link type="text/css" rel="stylesheet" href="style.css">
+
+
+
+    <!-- NOT LINKING TO CSS STYLESHEET!!!!!! -->
+
+
+
+
+
     <!-- JavaScript files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
