--- a/SmartNinja_Project/templates/frame.html
+++ b/SmartNinja_Project/templates/frame.html
@@ -46,6 +46,8 @@
                 <li role="separator" class="divider"></li>
                 <li><a href="/sng">.secretNumberGame</a></li>
                 <li role="separator" class="divider"></li>
+                <li><a href="/millionaire">.million$Question</a></li>
+                <li role="separator" class="divider"></li>
                 <li><a href="/logintest">.loginTest</a></li>
                 <li role="separator" class="divider"></li>
               </ul>
