--- a/SmartNinja_Project/templates/sng.html
+++ b/SmartNinja_Project/templates/sng.html
@@ -17,26 +17,10 @@
             <h2> Guess the secret number </h2>
             <form method="post"> <!-- action="/formposts" inside the tag would tell you where to send it -->
                 <input placeholder="secret number" type="number" name="Numberguess">
-                <button type="submit">Submit </button>
+                <button class="btn btn-warning btn-lg" type="submit">Submit Answer</button>
             </form>
 
     {% endif %}
-<br>
-<br>
-    <form method="post">
-        <button type="submit" value="a" name="answer">Answer A </button>
-    </form>
-    <form method="post">
-        <button type="submit" value="b" name="answer">Answer B </button>
-    </form>
-    <form method="post">
-        <button type="submit" value="c" name="answer">Answer C </button>
-    </form>
-    <form method="post">
-        <button type="submit" value="d" name="answer">Answer D </button>
-    </form>
-
-    <h5>you pressed {{answer}}</h5>
 
 {% endblock page_content %}
 
